[tool.poetry]
name = "practice_test"
version = "0.1.0"
description = ""
authors = ["ucpr <contact@ucpr.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.1"
pytest-mock = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
